@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2005  Free Software Foundation, Inc.
+# Copyright (C) 2005, 2006  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -42,10 +42,10 @@ FOO = $files $files2 \
 EOF
 
 # The `FOO = ...' line is 2293-byte long.  More than what a POSIX
-# conforment system is expected to support.
+# conformant system is expected to support.  So do not use grep
+# on the non-text file.
 
-# (It's OK if grep truncates the long line.)
-grep $match Makefile.am
+# grep $match Makefile.am
 
 $ACLOCAL
 $AUTOMAKE
