@@ -1,5 +1,9 @@
 2006-05-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/longlin2.test: Do not use `grep' on Makefile.am:
+	it has long lines and is thus not a text file; AIX 5.1 grep
+	fails to scan non-plain patterns from long lines.
+
 	* tests/overrid.test: Change all regexes for warning messages to
 	match after a colon, so that the prepended file names do not
 	cause false matches.  Tighten overrides regex.  Fix typo
